--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	<meta property="og:url" content="https://www.blowflowcreationz.com/">
 	<meta property="og:title" content="Blow Flow Genetics">
 	<meta property="og:description" content="Premium cannabis genetics with unique strains. Quality seeds and accessories for cannabis enthusiasts and growers.">
-	<meta property="og:image" content="/img/social-preview.jpg?v=2">
+	<meta property="og:image" content="https://www.blowflowcreationz.com/img/social-preview.jpg?v=1">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://www.blowflowcreationz.com/">
 	<meta property="twitter:title" content="Blow Flow Genetics">
 	<meta property="twitter:description" content="Premium cannabis genetics with unique strains. Quality seeds and accessories for cannabis enthusiasts and growers.">
-	<meta property="twitter:image" content="/img/social-preview.jpg?v=2">
+	<meta property="twitter:image" content="https://www.blowflowcreationz.com/img/social-preview.jpg?v=1">
 	
     <title>Blow Flow Genetics</title>
     <style>
