--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
         }
         
-        .strain-img, .product-img {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            border-bottom: 3px solid var(--green);
-        }
+		.strain-img, .product-img {
+			width: 100%;
+			aspect-ratio: 1/1;
+			object-fit: cover;
+			border-bottom: 3px solid var(--green);
+		}
         
         .card-content {
             padding: 20px;
