--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                     <div class="product-card" data-product="glass-collection">
                         <img src="/img/product2-placeholder.jpg" alt="Artisan Glass Collection" class="product-img">
                         <div class="card-content">
-                            <h3 class="card-title">Artisan Glass Collection</h3>
+                            <h3 class="card-title">Custom Lighting & Decor</h3>
                             <p class="card-description">Hand-blown glass pieces with psychedelic color patterns.</p>
                         </div>
                     </div>
