--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                         <img src="/img/product2-placeholder.jpg" alt="Artisan Glass Collection" class="product-img">
                         <div class="card-content">
                             <h3 class="card-title">Custom Lighting & Decor</h3>
-                            <p class="card-description">Hand-blown glass pieces with psychedelic color patterns.</p>
+                            <p class="card-description">Unique Lighting fixtures feature immaginative pieces created by local artists.</p>
                         </div>
                     </div>
                 </div>
