--- a/index.html
+++ b/index.html
@@ -769,22 +769,16 @@
             // Merchandise data
             const merchData = {
                 'branded-tshirt': {
-                    name: 'Psychedelic Logo Tee',
+                    name: 'Custom Hoodie #1',
                     image: '/img/merch1-placeholder.jpg',
                     price: '$29.99',
-                    description: 'Our premium cotton t-shirt features the signature Blow Flow Genetics psychedelic logo on the front with a full-back print showcasing our most popular strains in an artistic arrangement. Made from 100% organic cotton with a super soft finish, this shirt is both comfortable and durable. Available in black, purple, and white colorways.'
+                    description: 'Our premium heavyweight hoodie features a comfortable cotton-polyester blend that's perfect for all seasons. The front showcases our custom designs.. Complete with a kangaroo pocket, adjustable drawstring hood, and ribbed cuffs and waistband for the perfect fit.'
                 },
                 'snapback-cap': {
-                    name: 'Embroidered Snapback',
+                    name: 'Custom Hoodie #2',
                     image: '/img/merch2-placeholder.jpg',
-                    price: '$24.99',
-                    description: 'High-quality snapback cap featuring premium embroidery of our logo on the front panel. The adjustable snapback closure ensures one size fits most. Made from durable materials with a structured fit and flat brim. Available in black with multicolor embroidery that pops with our signature psychedelic colors.'
-                },
-                'hoodie': {
-                    name: 'Blow Flow Hoodie',
-                    image: '/img/merch3-placeholder.jpg',
-                    price: '$59.99',
-                    description: 'Our premium heavyweight hoodie features a comfortable cotton-polyester blend that's perfect for all seasons. The front showcases our embroidered logo while the back features a full-color print of our most iconic strain artwork. Complete with a kangaroo pocket, adjustable drawstring hood, and ribbed cuffs and waistband for the perfect fit.'
+                    price: '$29.99',
+                    description: 'Our premium heavyweight hoodie features a comfortable cotton-polyester blend that's perfect for all seasons. The front showcases our custom designs.. Complete with a kangaroo pocket, adjustable drawstring hood, and ribbed cuffs and waistband for the perfect fit.'
                 }
             };
             
