--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 <h2 class="section-title">Get In Touch</h2>
                 <div style="text-align: center; max-width: 600px; margin: 0 auto;">
                     <p style="margin-bottom: 20px;">Have questions about our products or want to place a special order? Drop us a line and we'll get back to you as soon as possible.</p>
-                    <a href="mailto:info@blowflowcreationz.com" class="cta-button">Contact Us</a>
+                    <a href="mailto:Blowflowllc@gmail.com" class="cta-button">Contact Us</a>
                 </div>
             </section>
         </div>
