--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
     <!-- Open Graph / Facebook / Discord -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://blowflowcreationz.com/">
+    <meta property="og:url" content="http://www.blowflowcreationz.com/">
     <meta property="og:title" content="Blow Flow Genetics">
     <meta property="og:description" content="Premium cannabis genetics with unique strains. Quality seeds and accessories for cannabis enthusiasts and growers.">
-    <meta property="og:image" content="https://blowflowcreationz.com/img/social-preview.jpg?v=5">
+    <meta property="og:image" content="http://www.blowflowcreationz.com/img/social-preview.jpg?v=5">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://blowflowcreationz.com/">
+    <meta property="twitter:url" content="http://www.blowflowcreationz.com/">
     <meta property="twitter:title" content="Blow Flow Genetics">
     <meta property="twitter:description" content="Premium cannabis genetics with unique strains. Quality seeds and accessories for cannabis enthusiasts and growers.">
-    <meta property="twitter:image" content="https://blowflowcreationz.com/img/social-preview.jpg?v=5">
+    <meta property="twitter:image" content="http://www.blowflowcreationz.com/img/social-preview.jpg?v=5">
     
     <title>Blow Flow Genetics</title>
     
