--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
     <div class="main-content">
         <div class="container">
             <section id="strains">
-                <h2 class="section-title">Premium Strains</h2>
+                <h2 class="section-title">Premium Collectables</h2>
                 <div class="strain-grid">
                     <!-- Strain Card 1 -->
                     <div class="strain-card" data-strain="tyson-punch">
@@ -770,10 +770,11 @@
                         <div class="card-content">
                             <h3 class="card-title">Tyson Punch Pie</h3>
                             <span class="strain-type">Indica Dominant</span>
-                            <p class="card-description">A knockout strain with powerful relaxing effects and fruity aroma.</p>
+                            <p class="card-description">A knockout with powerful relaxing effects and fruity aroma.</p>
                             <div class="strain-details">
+								<div class="detail-item">Collectable</div>
                                 <div class="detail-item">Feminized</div>
-                                <div class="detail-item">Indoor/Outdoor</div>
+                                <div class="detail-item">Indoor</div>
                                 <div class="detail-item">8-9 Weeks</div>
                             </div>
                         </div>
@@ -787,6 +788,7 @@
                             <span class="strain-type">Hybrid</span>
                             <p class="card-description">Complex profile with red fruit, earthy notes, and OG Kush punch.</p>
                             <div class="strain-details">
+								<div class="detail-item">Collectable</div>
                                 <div class="detail-item">Feminized</div>
                                 <div class="detail-item">Indoor</div>
                                 <div class="detail-item">9-10 Weeks</div>
