--- a/index.html
+++ b/index.html
@@ -1088,17 +1088,17 @@
 				<div class="footer-section">
 					<h3>Contact</h3>
 					<ul>
-						<li><a href="mailto:Blowflowllc@gmail.com">Blowflowllc@gmail.com</a></li>
+						<li><a href="mailto:Blowflowllc@gmail.com">E-Mail Us</a></li>
 						<li><a href="https://www.instagram.com/blowflowgenetics" target="_blank">Instagram</a></li>
 					</ul>
 				</div>
 				
 				<div class="footer-section">
-					<h3>Shop Our Friends</h3>
+					<h3>Visit Our Friends</h3>
 					<ul>
 						<li><a href="https://vivosun.com" target="_blank">Vivosun</a></li>
-						<li><a href="https://lovewhatyougrow.com" target="_blank">Love What You Grow</a></li>
-						<li><a href="https://fastbuds.com" target="_blank">FastBuds.com</a> <span style="color: var(--green);">(Code: BFG420)</span></li>
+						<li><a href="https://strainnavigator.com" target="_blank">Helpful Growing Assistant</a></li>
+						
 					</ul>
 				</div>
 			</div>
