--- a/terms.html
+++ b/terms.html
@@ -345,14 +345,14 @@
                     </ul>
                 </div>
                 
-                <div class="footer-section">
-                    <h3>Shop Our Friends</h3>
-                    <ul>
-                        <li><a href="https://vivosun.com" target="_blank">Vivosun</a></li>
-                        <li><a href="https://lovewhatyougrow.com" target="_blank">Love What You Grow</a></li>
-                        <li><a href="https://fastbuds.com" target="_blank">FastBuds.com</a> <span style="color: var(--green);">(Code: BFG420)</span></li>
-                    </ul>
-                </div>
+				<div class="footer-section">
+					<h3>Visit Our Friends</h3>
+					<ul>
+						<li><a href="https://vivosun.com" target="_blank">Vivosun</a></li>
+						<li><a href="https://strainnavigator.com" target="_blank">StrainNavigator</a></li>
+						
+					</ul>
+				</div>
             </div>
             <div class="copyright">
                 <p>© 2025 Blow Flow Genetics. All rights reserved.</p>
