--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
 					<h3>Visit Our Friends</h3>
 					<ul>
 						<li><a href="https://vivosun.com" target="_blank">Vivosun</a></li>
-						<li><a href="https://strainnavigator.com" target="_blank">Helpful Growing Assistant</a></li>
+						<li><a href="https://strainnavigator.com" target="_blank">StrainNavigator</a></li>
 						
 					</ul>
 				</div>
