--- a/privacy.html
+++ b/privacy.html
@@ -353,13 +353,12 @@
                     </ul>
                 </div>
                 
-                <div class="footer-section">
-                    <h3>Contact</h3>
-                    <ul>
-                        <li><a href="mailto:Blowflowllc@gmail.com">Blowflowllc@gmail.com</a></li>
-                        <li><a href="https://www.instagram.com/blowflowgenetics" target="_blank">Instagram</a></li>
-                    </ul>
-                </div>
+				<div class="footer-section">
+					<h3>Contact</h3>
+					<ul>
+						<li><a href="mailto:Blowflowllc@gmail.com">E-Mail Us</a></li>
+					</ul>
+				</div>
                 
 				<div class="footer-section">
 					<h3>Visit Our Friends</h3>
