--- a/index.html
+++ b/index.html
@@ -800,10 +800,12 @@
     <header>
         <div class="container">
             <div class="header-container">
-                <div class="logo-container">
-                    <img src="/img/logo-01.jpg" alt="Blow Flow Genetics" class="header-logo">
-                    <h1 class="site-title">Blow Flow Genetics</h1>
-                </div>
+				<div class="logo-container">
+					<a href="index.html" style="text-decoration: none; display: flex; align-items: center;">
+						<img src="/img/logo-01.jpg" alt="Blow Flow Genetics" class="header-logo">
+						<h1 class="site-title">Blow Flow Genetics</h1>
+					</a>
+				</div>
                 <nav>
                     <ul>
                         <li><a href="#strains">Strains</a></li>
