--- a/index.html
+++ b/index.html
@@ -1090,6 +1090,8 @@
 					<h3>Contact</h3>
 					<ul>
 						<li><a href="mailto:Blowflowllc@gmail.com">E-Mail Us</a></li>
+						<li><a href="https://discord.gg/6paMkDAFu8">Discord</a></li>
+						<li><a href="https://www.youtube.com/@Blow_Flow">YouTube</a></li>
 					</ul>
 				</div>
 				
