--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,8 @@
 					<ul>
 						<li><a href="mailto:Blowflowllc@gmail.com">E-Mail Us</a></li>
 						<li><a href="https://discord.gg/6paMkDAFu8">Discord</a></li>
-						<li><a href="https://www.youtube.com/@Blow_Flow">YouTube</a></li>
+						<li><a href="https://youtube.com/@blow_flow?si=SZrw1T02XSLajWmp">YouTube</a></li>
+						<li><a href="https://tiktok.com/@blow_flow24?_t=ZT-8uVGAl5z8jW&_r=1">TikTok</a></li>
 					</ul>
 				</div>
 				
