--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
 					id: 'premium-rolling-tray',
 					name: 'Premium Rolling Tray Bundle',
 					image: '/img/product1-placeholder.jpg',
-					price: 40.00+,
+					price: 40.00,
 					category: 'product',
 					description: 'Our Premium Rolling Tray Bundle includes everything you need for the perfect session. The bundle features a custom-designed metal rolling tray with our signature psychedelic art, a 4-piece metal grinder with pollen catcher, king size rolling papers, a rolling machine, herb storage container, and a custom lighter. All items come in a gift-ready package that makes this the ultimate accessory collection for enthusiasts.',
 					hasOptions: true,
@@ -1181,7 +1181,7 @@
 					id: 'glass-collection',
 					name: 'Custom Lighting & Decor',
 					image: '/img/product2-placeholder.jpg',
-					price: 60.00+,
+					price: 60.00,
 					category: 'product',
 					description: 'Our Unique Lighting fixtures feature handcrafted immaginative pieces created by local artists. Each piece is unique and inspired by our local flair and flavor. The collection includes various sizes and designs, all made with premium materials and concepts. These limited edition pieces combine functionality with artistic expression, making them both practical and displayable art.',
 					hasOptions: true,
@@ -1201,7 +1201,7 @@
 					id: 'merch1',
 					name: 'Custom Hoodie #1',
 					image: '/img/merch1-placeholder.jpg',
-					price: 24.99+,
+					price: 24.99,
 					category: 'merch',
 					description: 'Our premium heavyweight hoodie features a comfortable cotton-polyester blend that is perfect for all seasons. The front showcases our custom designs. Complete with a kangaroo pocket, adjustable drawstring hood, and ribbed cuffs and waistband for the perfect fit.',
 					hasOptions: true,
@@ -1218,7 +1218,7 @@
 					id: 'merch2',
 					name: 'Custom Hoodie #2',
 					image: '/img/merch2-placeholder.jpg',
-					price: 24.99+,
+					price: 24.99,
 					category: 'merch',
 					description: 'Our premium heavyweight hoodie features a comfortable cotton-polyester blend that is perfect for all seasons. The front showcases our custom designs. Complete with a kangaroo pocket, adjustable drawstring hood, and ribbed cuffs and waistband for the perfect fit.',
 					hasOptions: true,
