--- a/index.html
+++ b/index.html
@@ -1089,10 +1089,10 @@
 				<div class="footer-section">
 					<h3>Contact</h3>
 					<ul>
-						<li><a href="mailto:Blowflowllc@gmail.com">E-Mail Us</a></li>
-						<li><a href="https://discord.gg/6paMkDAFu8">Discord</a></li>
-						<li><a href="https://youtube.com/@blow_flow?si=SZrw1T02XSLajWmp">YouTube</a></li>
-						<li><a href="https://tiktok.com/@blow_flow24?_t=ZT-8uVGAl5z8jW&_r=1">TikTok</a></li>
+						<li><a href="mailto:Blowflowllc@gmail.com" target="_blank">E-Mail Us</a></li>
+						<li><a href="https://discord.gg/6paMkDAFu8" target="_blank">Discord</a></li>
+						<li><a href="https://youtube.com/@blow_flow?si=SZrw1T02XSLajWmp" target="_blank">YouTube</a></li>
+						<li><a href="https://tiktok.com/@blow_flow24?_t=ZT-8uVGAl5z8jW&_r=1" target="_blank">TikTok</a></li>
 					</ul>
 				</div>
 				
@@ -1101,7 +1101,7 @@
 					<ul>
 						<li><a href="https://vivosun.com" target="_blank">Vivosun</a></li>
 						<li><a href="https://strainnavigator.com" target="_blank">StrainNavigator</a></li>
-						
+						<li><a href="https://daydreamergenetics.com" target="_blank">DayDreamer Genetics</a></li>						
 					</ul>
 				</div>
 			</div>
