--- a/tshirts.html
+++ b/tshirts.html
@@ -25,7 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
     
     <!-- Color picker -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-picker/2.12.2/vanilla-picker.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanilla-picker@2.12.2/dist/vanilla-picker.min.js"></script>
     
     <style>
         :root {
