--- a/tshirts.html
+++ b/tshirts.html
@@ -907,11 +907,11 @@
 				currentState.view = view;
 				
 				if (view === "front") {
-					shirtImg.src = '/img/tshirt-white-front.png'; // Use your actual image filename
+					shirtImg.src = '/img/tshirt-front-white.png'; // Use your actual image filename
 					document.getElementById('frontTextSection').style.display = 'block';
 					document.getElementById('backTextSection').style.display = 'none';
 				} else if (view === "back") {
-					shirtImg.src = '/img/tshirt-white-back.png'; // Use your actual image filename
+					shirtImg.src = '/img/tshirt-back-white.png'; // Use your actual image filename
 					document.getElementById('frontTextSection').style.display = 'none';
 					document.getElementById('backTextSection').style.display = 'block';
 				}
