--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                     <div class="strain-card" data-strain="tyson-punch">
                         <img src="/img/strain1-square.jpg" alt="Tyson Punch" class="strain-img">
                         <div class="card-content">
-                            <h3 class="card-title">Tyson Punch Pie</h3>
+                            <h3 class="card-title">Tyson Punch Pie S1</h3>
                             <span class="strain-type">Indica Dominant</span>
                             <p class="card-description">A knockout with powerful relaxing effects and fruity aroma.</p>
                             <div class="strain-details">
