--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
             const strainData = {
 				'tyson-punch': {
 					id: 'tyson-punch',
-					name: 'Tyson Punch Pie',
+					name: 'Tyson Punch Pie S1',
 					type: 'Indica Dominant (90% Indica / 10% Sativa)',
 					image: '/img/strain1-placeholder.jpg',
 					cardImage: '/img/strain1-square.jpg',
@@ -1130,7 +1130,7 @@
 					flowering: '8-9 Weeks',
 					yield: 'Moderate - Benefits from multi-topping',
 					seeds: 'Feminized',
-					description: 'Tyson Punch Pie is our flagship strain, created from Purple Punch x Purple Kush genetics. It delivers a powerful knockout effect with a complex terpene profile featuring strong pineapple, sweet kushy gas, citrus, lime, and light cherry notes. The buds develop beautiful purple hues when properly cultivated. This heavy indica-dominant strain is perfect for evening use, pain relief, and relaxation.',
+					description: 'Tyson Punch Pie S1 is our flagship strain, created from Purple Punch x Purple Kush genetics. It delivers a powerful knockout effect with a complex terpene profile featuring strong pineapple, sweet kushy gas, citrus, lime, and light cherry notes. The buds develop beautiful purple hues when properly cultivated. This heavy indica-dominant strain is perfect for evening use, pain relief, and relaxation.',
 					category: 'strain',
 					packOptions: [
 						{ id: 'tyson-punch-3', size: '3 Pack', regularPrice: 35, salePrice: 30 },
