--- a/tshirt.html
+++ b/tshirt.html
@@ -632,9 +632,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="index.html#strains">Strains</a></li>
-                        <li><a href="index.html#products">Products</a></li>
-                        <li><a href="index.html#merchandise">Merchandise</a></li>
+                        <li><a href="collectables.html">Collectables</a></li>
+                        <li><a href="shop.html">Crafted Items</a></li>
+                        <li><a href="merch.html">Merch</a></li>
+                        <li><a href="tshirt.html">Custom Tees</a></li>
                         <li>
                             <a href="#cart" id="cart-link">
                                 <span>Cart</span>
