--- a/tshirt.html
+++ b/tshirt.html
@@ -26,7 +26,8 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
     <!-- html2canvas for image capture -->
 	<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-
+	<link rel="stylesheet" href="css/styles.css">
+		
     <style>
         :root {
             --purple: #6a1b9a;
