--- a/shop.html
+++ b/shop.html
@@ -189,8 +189,9 @@
                 <nav>
                     <ul>
                         <li><a href="collectables.html">Collectables</a></li>
-                        <li><a href="shop.html" class="active">Shop</a></li>
-                        <li><a href="tshirt.html">Custom Apparel</a></li>
+                        <li><a href="shop.html">Crafted Items</a></li>
+                        <li><a href="merch.html">Merch</a></li>
+                        <li><a href="tshirt.html">Custom Tees</a></li>
                         <li>
                             <a href="#cart" id="cart-link">
                                 <span>Cart</span>
