--- a/collectables.html
+++ b/collectables.html
@@ -170,9 +170,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="collectables.html" class="active">Collectables</a></li>
-                        <li><a href="shop.html">Shop</a></li>
-                        <li><a href="tshirt.html">Custom Apparel</a></li>
+                        <li><a href="collectables.html">Collectables</a></li>
+                        <li><a href="shop.html">Crafted Items</a></li>
+                        <li><a href="merch.html">Merch</a></li>
+                        <li><a href="tshirt.html">Custom Tees</a></li>
                         <li>
                             <a href="#cart" id="cart-link">
                                 <span>Cart</span>
