--- a/tshirt.html
+++ b/tshirt.html
@@ -635,7 +635,7 @@
                     <ul>
                         <li><a href="collectables.html">Collectables</a></li>
                         <li><a href="shop.html">Crafted Items</a></li>
-                        <li><a href="merch.html">Merch</a></li>
+                        <li><a href="https://blowflowcreationz.com/shop.html#merchandise">Merch</a></li>
                         <li><a href="tshirt.html">Custom Tees</a></li>
                         <li>
                             <a href="#cart" id="cart-link">
