--- a/collectables.html
+++ b/collectables.html
@@ -437,7 +437,7 @@
     </footer>
 
     <!-- Font Awesome for icons -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script> -->
     
     <!-- Site-wide JS -->
     <!--  <script src="js/cart.js"></script> -->
