--- a/collectables.html
+++ b/collectables.html
@@ -543,8 +543,8 @@
 					flowering: '7-8 Weeks',
 					yield: 'Indoor: 400-450g/m² | Outdoor: 500-600g/plant',
 					seeds: 'Feminized',
-					description: 'Northern Frost is our take on a classic indica strain with added cold resistance. This strain features dense, resin-covered buds with a complex aroma of pine, earth, and subtle sweet notes. Developed for fast flowering and resilience, it's ideal for beginner growers and those in northern climates.',
-					growingTips: 'Extremely resilient and forgiving for new growers. Compact plants that don't require much height. Resistant to temperature fluctuations and common pests. Works well in SOG (Sea of Green) setups. Benefits from supplemental calcium and magnesium during flowering for optimal resin production.',
+					description: 'Northern Frost is our take on a classic indica strain with added cold resistance. This strain features dense, resin-covered buds with a complex aroma of pine, earth, and subtle sweet notes. Developed for fast flowering and resilience, it is ideal for beginner growers and those in northern climates.',
+					growingTips: 'Extremely resilient and forgiving for new growers. Compact plants that do not require much height. Resistant to temperature fluctuations and common pests. Works well in SOG (Sea of Green) setups. Benefits from supplemental calcium and magnesium during flowering for optimal resin production.',
 					effects: 'Delivers a heavy-hitting body high that promotes deep relaxation and sleep. Excellent for insomnia, chronic pain, muscle spasms, and anxiety. The mental effects are subtle but pleasant, offering a gentle euphoria and sense of tranquility without racing thoughts.',
 					images: [
 						'/img/strain4-plant1.jpg',
