--- a/index.html
+++ b/index.html
@@ -526,12 +526,12 @@
                         <span class="nav-card-button">View Collection</span>
                     </a>
                     
-                    <!-- Merch Nav Card -->
-                    <a href="merch.html" class="nav-card merch-nav-card">
-                        <h3 class="nav-card-title">Merchandise</h3>
-                        <p class="nav-card-description">Browse our branded hoodies, t-shirts, hats and more.</p>
-                        <span class="nav-card-button">Shop Merch</span>
-                    </a>
+					<!-- Merch Nav Card -->
+					<a href="https://blowflowcreationz.com/shop.html#merchandise" class="nav-card merch-nav-card">
+						<h3 class="nav-card-title">Merchandise</h3>
+						<p class="nav-card-description">Browse our branded hoodies, t-shirts, hats and more.</p>
+						<span class="nav-card-button">Shop Merch</span>
+					</a>
                 </div>
             </div>
         </section>
