--- a/collectables.html
+++ b/collectables.html
@@ -384,6 +384,21 @@
     <!-- Collectables-specific JavaScript -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
+			const urlParams = new URLSearchParams(window.location.search);
+			const strainParam = urlParams.get('strain');
+
+			// If a strain parameter exists, open that strain's modal
+			if (strainParam) {
+				// Find the strain data for the requested strain
+				const requestedStrain = strainData[strainParam];
+				if (requestedStrain && requestedStrain.status === 'available') {
+					// Use setTimeout to ensure the DOM is fully loaded before trying to open the modal
+					setTimeout(() => {
+						openStrainModal(requestedStrain);
+					}, 500);
+				}
+			}		
+		
             // Initialize cart
             let cart = JSON.parse(localStorage.getItem('blowflowCart')) || [];
             
