--- a/index.html
+++ b/index.html
@@ -451,14 +451,14 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <div class="genetics-badge">
-                    <span>Premium Cannabis Genetics</span>
+                    <span>Premium Collectable Genetics</span>
                 </div>
                 <h1 class="hero-title">Exceptional Collectables</h1>
                 <p class="hero-subtitle">Carefully bred for unique characteristics, exceptional quality, and distinctive profiles.</p>
                 <p class="hero-tagline">Elevate Your Collection</p>
                 <div class="cta-buttons">
-                    <a href="collectables.html" class="cta-button">Explore Collectables</a>
-                    <a href="#collectables-preview" class="cta-button secondary">View Featured Strains</a>
+                    <a href="collectables.html" class="cta-button">Collectable Genetics</a>
+                    <a href="#collectables-preview" class="cta-button secondary">Featured Genetics</a>
                 </div>
             </div>
         </section>
